# code-style-sheets-artifact

./: .gitignore  .gitmodules  README.md  README.org  cabal.project  flake.nix  hass.cabal
app/: Blocks.hs  Common.hs  HeatMap.hs  PointFreePipeline.hs  ProjectionBoxes.hs  SemanticHighlighting.hs  SkeletonCode.hs  SyntaxHighlighting.hs  TestRunner.hs  TinyCommon.hs  TypeError.hs  UserCustomized.hs
chi/: chi.cabal
chi/src/: CHI.hs
chi/src/CHI/: Parser.hs  Types.hs
client/: App.tsx  Button.tsx  CodeMirror.tsx  ContextMenu.tsx  CustomLayoutViewer.tsx  FloatingComponent.tsx  Inspector.tsx  MenuBar.tsx  ModalDialog.tsx  MultiPanelView.tsx  StylishTextView.tsx  TestCaseViewer.tsx  Types.ts  Utils.ts  button.module.css  common.ts  context-menu.module.css  custom-layout-viewer.module.css  default-styles.module.css  index.html  index.tsx  inspector.module.css  measureElement.ts  menu-bar.module.css  modal-dialog.module.css  multi-panel-view.module.css  package.json  style.css  test-case-viewer.module.css  tsconfig.json  webpack.config.js
examples/: HeatMap.hs  PointFreePipeline.hs  ProjectionBoxes.hs  ProjectionBoxesInput.hs  SemanticHighlighting.hs  SkeletonCode.hs  SyntaxHighlighting.hs  TestRunner.hs  TypeError.hs
scripts/: countLOC.rb  initSubmodules.sh
src/: Requests.hs  Server.hs
stylish-text/: stylish-text.cabal
stylish-text/src/: Layout.hs  Stylesheet.hs  StylishText.hs
stylish-text/src/Layout/: Algorithm.hs  Geometry.hs  IntervalTree.hs  Types.hs
stylish-text/src/Stylesheet/: Parser.hs  Types.hs
stylish-text/src/StylishText/: Renderable.hs  Style.hs  Types.hs  Utils.hs
tiny-chi/: tiny-chi.cabal
tiny-chi/src/Tiny/: CHI.hs
tiny-chi/src/Tiny/CHI/: Anno.hs  Builtins.hs  ClassicProjectionBoxesStylish.hs  Core.hs  DefaultStylish.hs  Eval.hs  Parser.hs  ProjectionBoxesStylish.hs  Rename.hs  StylishCode.hs  Typecheck.hs  Types.hs  Util.hs  Value.hs
tiny-chi/src/Tiny/CHI/Core/: Anno.hs
tiny-chi/src/Tiny/CHI/Typecheck/: Types.hs
ts-parser/: ts-parser.cabal
ts-parser/haskell-tree-sitter/: .gitmodules
ts-parser/haskell-tree-sitter/tree-sitter-haskell/: tree-sitter-haskell.cabal
ts-parser/src/TS/: Parser.hs
